[metadata]
name = jarshonte
author = Jacan Chaplais
author_email = jacanchaplais@gmail.com
description = Short description of package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jacanchaplais/jarshonte
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = jarshonte
install_requires =
    click

[options.entry_points]
console_scripts = 
    jarsh = jarshonte:main
